[project]
name = "binance-mcp"
version = "1.0.0"
description = "Binance MCP Server – Full Trading Coverage via FastMCP"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastmcp>=2.0.0",
    "ccxt>=4.3.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
binance-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["binance_mcp"]

[tool.uv]
dev-dependencies = []
